--- a/ex001.css
+++ b/ex001.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgb(197, 140, 250);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif; /* comentario css */
 }
 
 h1 {
