--- a/FourthJs/ex.004.css
+++ b/FourthJs/ex.004.css
@@ -5,4 +5,6 @@ div#area {
   height: 200px;
   line-height: 200px;
   text-align: center;
+  font-size: 28px;
+  font-family: Arial, Helvetica, sans-serif;
 }
